--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_options">Options</string>
     <string name="network_unavailable_message">Network is unavailable!</string>
+    <string name="Forum">Forum</string>
 </resources>
