--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="title_activity_options">Hudd3L</string>
     <string name="network_unavailable_message">Network is unavailable!</string>
     <string name="Forum">Forum</string>
-    <string name="QandA">Q and A</string>
+    <string name="QandA">Q &amp; A</string>
 </resources>
