Most recent version of Hudd3L.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="Forum">Forum</string>
     <string name="QandA">Q &amp; A</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_mission">mission</string>
+
 </resources>
